--- a/index.html
+++ b/index.html
@@ -202,14 +202,16 @@
             flex-wrap: wrap;
         }
 
-        /* Dashboard Layout - Version 2.0 Grid */
+        /* Dashboard Layout - Version 3.0 Horizontal */
         .results-overview {
             display: grid !important;
-            grid-template-columns: 1fr 1fr;
-            grid-template-rows: 1fr 1fr;
-            gap: 1rem;
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: 1fr;
+            gap: 1.5rem;
             margin-bottom: 2rem;
-            height: 450px;
+            max-width: 1400px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         .party-card {
@@ -225,6 +227,7 @@
             justify-content: center;
             align-items: center;
             text-align: center;
+            min-height: 280px;
         }
 
         .party-card.jamaat {
@@ -233,13 +236,13 @@
         }
 
         .party-card.bnp {
-            grid-column: 1 !important;
-            grid-row: 2 !important;
+            grid-column: 2 !important;
+            grid-row: 1 !important;
         }
 
         .party-card.others {
-            grid-column: 2 !important;
-            grid-row: 1 / 3 !important;
+            grid-column: 3 !important;
+            grid-row: 1 !important;
         }
 
         .party-card-content {
@@ -530,30 +533,51 @@
             opacity: 0.3;
         }
 
+        @media (max-width: 1200px) {
+            .results-overview {
+                max-width: 100%;
+            }
+            
+            .party-card {
+                min-height: 240px;
+            }
+
+            .seats-count {
+                font-size: 3rem;
+            }
+
+            .vote-percentage {
+                font-size: 1.8rem;
+            }
+        }
+
         @media (max-width: 768px) {
             .header h1 {
                 font-size: 1.8rem;
             }
 
             .results-overview {
-                grid-template-columns: 1fr;
-                grid-template-rows: auto auto auto;
-                height: auto;
+                grid-template-columns: 1fr !important;
+                grid-template-rows: auto auto auto !important;
+            }
+
+            .party-card {
+                min-height: auto;
             }
 
             .party-card.jamaat {
-                grid-column: 1;
-                grid-row: 1;
+                grid-column: 1 !important;
+                grid-row: 1 !important;
             }
 
             .party-card.bnp {
-                grid-column: 1;
-                grid-row: 2;
+                grid-column: 1 !important;
+                grid-row: 2 !important;
             }
 
             .party-card.others {
-                grid-column: 1;
-                grid-row: 3;
+                grid-column: 1 !important;
+                grid-row: 3 !important;
             }
 
             .map-container {
@@ -570,6 +594,10 @@
 
             .input-grid {
                 grid-template-columns: 1fr;
+            }
+
+            .party-stats {
+                gap: 2rem;
             }
         }
     </style>
